--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,90 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Lorenzo Carpentieri
     - name: Date of Birth
-      value: 14th March 1879
+      value: 17th February 1999
     - name: Languages
-      value: English, German
+      value: Italian, English
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: Full-time PhD student
+      institution: University of Salerno, Italy
+      year: 2022-NOW
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+        - Approximate Computing.
+        - Energy-efficient Computing.
+        - Performance portability.
+        - Programming models.
 
 - title: Experience
+  
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
-      items:
-        - Max Planck Medal
-
-- title: Academic Interests
+    - title:  PhD Student
+      institution: University of Salerno
+      year: 2022-NOW
+      description: PhD in Computed Science. Working on approximate and energy-efficient computing in the field of HPC.
+  
+    - title:  Teaching Assistant
+      institution: University of Salerno
+      year: 2022-2023
+      description: Conducting extracurricular activities aimed at teaching Data Structure in C and Distributed Programming.
+    
+    - title: Research Scolarship
+      institution: University of Salerno
+      year: 2021-2022
+      description: Contributed to the EuroHPC LiGate project, focused on advancing drug discovery in High-Performance Computing (HPC) environments. Worked on the porting and optimization of the LiGen platform from CUDA to SYCL, enhancing its adaptability and performance. Additionally, contributed to energy optimization by implementing frequency scaling.
+  
+- title: Skills
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Programming skills
       items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
+        - "<u>Excellent Knowledge</u>: C++, CUDA, SYCL, oneAPI"
+        - "<u>Good Knowledge</u>: Java, Bash, Python"
+    - title: Organizational Skills
       items:
-        - Description 1.
-        - Description 2.
+        - "<u>Problem Solving</u>: Developed strong analytical and problem-solving skills through PhD research and scholarship projects, consistently finding effective solutions to technical challenges."
+        - "<u>Workload</u>: Improved time management and organizational skills by balancing PhD work, exams, and research activities, ensuring deadlines were met efficiently while maintaining high-quality results."
+    - title: Communication and Interpersonal Skills
+      description: Gained excellent communication and interpersonal skills by collaborating on various projects, fostering teamwork, adaptability, and effective task management.
+teamwork abilities. I'm still improving this skill during my PhD."
+
+- title: Languages
+  type: nested_list
+  contents:
+    - title: Italian
+      items:
+        - Native
+    - title: English
+      items:
+        - "<u>Listening</u>: C1"
+        - "<u>Reading</u>: C1"
+        - "<u>Writing</u>: C1"
+        - "<u>Spoken Production</u>: B2"
+        - "<u>Spoken Interaction</u>: B2"
 
 - title: Other Interests
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - <u>Hobbies:</u> Gaming, Bodybuilding, Kickboxing
+
+# - title: Academic Interests
+#   type: nested_list
+#   contents:
+#     - title: Topic 1.
+#       items:
+#         - Description 1.
+#         - Description 2.
+#     - title: Topic 2.
+#       items:
+#         - Description 1.
+#         - Description 2.
+
+# - title: Other Interests
+#   type: list
+#   contents:
+#     - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
